# liboptimization

./: .gitignore  Makefile.am  Makefile.am.inc  autogen.sh  configure.ac  dummy.cc  liboptimization.pc.in  mingw-configure
debian/: changelog  control  copyright  liboptimization2-dev.install  rules
docs/: Makefile.am  doxygen.cfg.in  mainpage.hh  messages.hh  optimization.hh
docs/pages/: index.md  optimization.md
optimization/: Makefile.am  Makefile.am.inc  command.proto  constants.cc  constants.hh  debug.hh  discovery.cc  discovery.hh  discovery.proto  dispatcher.cc  dispatcher.hh  messages.cc  messages.hh  optimization.hh  processes.cc  processes.hh  socketbuffer.cc  socketbuffer.hh  task.proto  taskreader.cc  taskreader.hh  webots.cc  webots.hh  webots_unix.cc  webots_unix.hh  webots_windows.cc  webots_windows.hh
optimization/Boundaries/: Makefile.am  add1.cc  add2.cc  boundaries.hh  boundaries.ih  boundaries1.cc  boundaries2.cc  clone.cc  copy.cc
optimization/Constants/: Makefile.am  constants.hh  constants.ih  statics.cc
optimization/Container/: Makefile.am  container.hh  container.ih
optimization/Discovery/: Makefile.am  datacheckns.cc  discovery.cc  discovery.hh  discovery.ih  listen.cc  ns.cc  ondatahandler.cc  setns.cc
optimization/Dispatcher/: Makefile.am  dispatcher.hh  dispatcher.ih  main.cc  readrequest.cc  readsettings.cc  run.cc  setting1.cc  setting2.cc  usemainloop.cc  writeresponse.cc
optimization/Fitness/: Makefile.am  clone.cc  compile.cc  compilecpg.cc  copy.cc  datadata.cc  datadestructor.cc  evaluate.cc  fitness.cc  fitness.hh  fitness.ih  fitness1.cc  operatorgreater.cc  operatorless.cc  operatorstring.cc  reset.cc  update.cc  value.cc  values.cc
optimization/Messages/: Makefile.am  Makefile.am.inc  command.proto  create.cc  discovery.proto  messages.hh  messages.ih  task.proto  worker.proto
optimization/Optimizer/: Makefile.am  addextension.cc  addextensionreal.cc  addsolution.cc  best1.cc  best2.cc  clear.cc  clone.cc  createsolution.cc  customrequest.cc  customresponse.cc  datadestructor.cc  datasetseed.cc  db.cc  done.cc  getextension1.cc  getextension2.cc  hasbest.cc  initialize.cc  initializedatabase.cc  initializefitnesstable.cc  initialpopulation.cc  iteration.cc  log1.cc  log2.cc  normalizefitnessname.cc  optimizer.hh  optimizer.ih  optimizer1.cc  optimizer2.cc  reset.cc  save1.cc  save2.cc  setdatafilename.cc  setup.cc  statics.cc  update1.cc  update2.cc
optimization/Optimizer/Extension/: Makefile.am  clear.cc  clone.cc  customrequest.cc  customresponse.cc  datadestructor.cc  done.cc  extension.cc  extension.hh  extension.ih  initializedatabase.cc  name.cc  newsolution.cc  optimizer1.cc  optimizer2.cc  save1.cc  save2.cc  set.cc  setname.cc  setoptimizer.cc  settings.cc  update1.cc  update2.cc
optimization/Parameters/: Makefile.am  add1.cc  add2.cc  add3.cc  clone.cc  copy.cc  operatorvectordouble.cc  parameters.hh  parameters.ih  parameters1.cc  parameters2.cc  values.cc
optimization/Settings/: Makefile.am  getproperty.cc  hasproperty.cc  propertyexists.cc  settings.cc  settings.hh  settings.ih  storeproperty.cc
optimization/Solution/: Makefile.am  adddata.cc  addparameter1.cc  addparameter2.cc  clear.cc  clone.cc  copy1.cc  copy2.cc  dataclear.cc  datadestructor.cc  initialize.cc  operatorstring.cc  removeparameter.cc  reset.cc  setfitness.cc  solution.hh  solution.ih  solution1.cc  solution2.cc
optimization/State/: state.hh
optimization/Webots/: Makefile.am  hasrequest.cc  instance.cc  ondata.cc  operatortypebool.cc  readsettings.cc  request.cc  respond1.cc  respond2.cc  respondfail.cc  response.cc  setting1.cc  setting2.cc  statics.cc  waitforrequest.cc  webots.cc  webots.hh  webots.ih
optimization/messages/: command.proto  discovery.proto  monitor.proto  task.proto
